[package]
name = "biomon"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.6"
chrono = "0.4.38"
fern = "0.6.2"
futures = "0.3.31"
ini = "1.3.0"
log = "0.4.22"
rusqlite = {version = "0.32.1", features = ["bundled", "backup"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = "1.10.0"
